--- a/env.example.properties
+++ b/env.example.properties
@@ -1,7 +1,7 @@
 JAR_FILE_PATH="./target/idemanager-0.0.1-SNAPSHOT.jar"
-DOCKER_REGISTRY="amdp-registry.skamdp.org/mydev-ywyi"
-DOCKER_REGISTRY_USER="robot$amdp-registry-robot-account"
-DOCKER_REGISTRY_PASSWORD="0Ohfvw1Fv0fETInThs4waSyCitLTMrfi"
+DOCKER_REGISTRY="{IMAGE-REGISTRY-URL}/{PROJECT_NAME}"
+DOCKER_REGISTRY_USER=""
+DOCKER_REGISTRY_PASSWORD=""
 DOCKER_CACHE="--no-cache"
 IMAGE_NAME="ide-manager"
 VERSION="1.0.0"
